--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -8,6 +8,7 @@
 @use 'components/header';
 @use 'components/footer';
 @use 'components/hero';
+@use 'components/home';
 @use 'components/card';
 @use 'components/buttons';
 @use 'components/badges';
